--- a/homophone-game.html
+++ b/homophone-game.html
@@ -154,9 +154,15 @@
         <div style="height:1px;background:rgba(255,255,255,.10);margin:14px 0"></div>
 
         <div class="row" style="align-items:flex-end;">
-          <div style="flex:1">
-            <label>Name</label>
-            <input id="nameInput" type="text" placeholder="Team Blue" maxlength="24">
+          <div style="flex:1;display:flex;gap:10px;flex-wrap:wrap;">
+            <div style="flex:1;min-width:150px">
+              <label>Name</label>
+              <input id="nameInput" type="text" placeholder="Team Blue" maxlength="24">
+            </div>
+            <div style="flex:1;min-width:150px">
+              <label>Email</label>
+              <input id="emailInput" type="email" placeholder="your@email.com" maxlength="100">
+            </div>
           </div>
           <button class="primary" id="saveBtn" disabled>Save</button>
         </div>
@@ -525,6 +531,7 @@ const pauseBtn=document.getElementById("pauseBtn");
 const resetBtn=document.getElementById("resetBtn");
 const elToast=document.getElementById("toast");
 const nameInput=document.getElementById("nameInput");
+const emailInput=document.getElementById("emailInput");
 const saveBtn=document.getElementById("saveBtn");
 const lbBody=document.getElementById("lbBody");
 
