--- a/homophone-game.html
+++ b/homophone-game.html
@@ -67,7 +67,7 @@
     .ansBtn.good{outline:3px solid rgba(45,212,191,.45);background:rgba(45,212,191,.15)}
     .ansBtn.bad{outline:3px solid rgba(251,113,133,.45);background:rgba(251,113,133,.12)}
     label{display:block;font-size:12px;color:var(--muted);margin:10px 0 6px}
-    select,input[type="text"]{
+    select,input[type="text"],input[type="email"]{
       width:100%;padding:10px 12px;border-radius:12px;border:1px solid rgba(255,255,255,.12);
       background:rgba(255,255,255,.05);color:var(--text);outline:none
     }
