Change name placeholder from 'Team Blue' to 'John Smith' (first and last name example)

--- a/homophone-game.html
+++ b/homophone-game.html
@@ -157,7 +157,7 @@
           <div style="flex:1;display:flex;gap:10px;flex-wrap:wrap;">
             <div style="flex:1;min-width:150px">
               <label>Name</label>
-              <input id="nameInput" type="text" placeholder="Team Blue" maxlength="24">
+              <input id="nameInput" type="text" placeholder="John Smith" maxlength="24">
             </div>
             <div style="flex:1;min-width:150px">
               <label>Email</label>
