--- a/homophone-game.html
+++ b/homophone-game.html
@@ -150,9 +150,12 @@
           <button class="durationBtn" id="durationBtn60" data-duration="60">60 seconds</button>
           <button class="durationBtn" id="durationBtn90" data-duration="90">90 seconds</button>
         </div>
+      </div>
+    </div>
 
-        <div style="height:1px;background:rgba(255,255,255,.10);margin:14px 0"></div>
-
+    <div class="grid-full">
+      <div class="card">
+        <h1 style="margin:0 0 12px;font-size:20px">Save Your Score</h1>
         <div class="row" style="align-items:flex-end;">
           <div style="flex:1;display:flex;gap:10px;flex-wrap:wrap;">
             <div style="flex:1;min-width:150px">
