Rename homophone-game.html to blank-game.html and update launchpad

--- a/launchpad.html
+++ b/launchpad.html
@@ -108,7 +108,7 @@
         <span class="app-icon">🐍</span>
       </a>
 
-      <a href="homophone-game.html" class="app-card" style="text-decoration: none; color: inherit;">
+      <a href="blank-game.html" class="app-card" style="text-decoration: none; color: inherit;">
         <span class="app-icon">📝</span>
       </a>
 
