Update page title to 'Blank Game'

--- a/blank-game.html
+++ b/blank-game.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Confusable Words – Rapid Tap (v2)</title>
+  <title>Blank Game</title>
   <style>
     :root{
       --bg:#0b1020; --card:#121a33; --muted:#aab2d5; --text:#eef1ff;
