--- a/blank-game.html
+++ b/blank-game.html
@@ -139,8 +139,8 @@
         <h1 style="margin:0 0 12px;font-size:20px">Options</h1>
         <label>Pack</label>
         <div style="display:flex;gap:10px;flex-wrap:wrap;margin-top:6px;">
-          <button class="packBtn" id="packBtnHomophone2" data-category="homophone" data-words="2">Homophone 2 word</button>
-          <button class="packBtn" id="packBtnHomophone3" data-category="homophone" data-words="3">Homophone 3 word</button>
+          <button class="packBtn" id="packBtnHomophone2" data-category="homophone" data-words="2">Homophone (2)</button>
+          <button class="packBtn" id="packBtnHomophone3" data-category="homophone" data-words="3">Homophones (3)</button>
           <button class="packBtn" id="packBtnTenses" data-category="tenses">Tenses</button>
           <button class="packBtn" id="packBtnPrepositions" data-category="prepositions">Prepositions</button>
         </div>
