--- a/blank-game.html
+++ b/blank-game.html
@@ -12,7 +12,7 @@
     *{box-sizing:border-box}
     body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;background:radial-gradient(1100px 600px at 30% 10%, #182252, var(--bg));color:var(--text)}
     .wrap{max-width:980px;margin:0 auto;padding:16px}
-    .grid{display:grid;grid-template-columns: 1.3fr .7fr;gap:14px}
+    .grid{display:grid;grid-template-columns: 1.3fr .7fr;gap:14px;margin-top:14px}
     .grid-full{display:grid;grid-template-columns:1fr;gap:14px;margin-top:14px}
     @media (max-width:900px){.grid{grid-template-columns:1fr}}
     .card{background:rgba(18,26,51,.92);border:1px solid rgba(255,255,255,.08);border-radius:18px;padding:16px;box-shadow:0 10px 25px rgba(0,0,0,.25)}
@@ -111,7 +111,7 @@
 </head>
 <body>
   <div class="wrap">
-    <div class="grid-full">
+    <div class="grid-full" style="margin-top:0;">
       <div class="card">
         <div class="pillrow">
           <div class="pill" id="timePill">Time: <b id="timeLeft">30</b>s</div>
@@ -187,7 +187,7 @@
         </table>
       </div>
     </div>
-    <div id="version">v1.0.12</div>
+    <div id="version">v1.0.13</div>
   </div>
 
 <script>
