--- a/unit-tests.html
+++ b/unit-tests.html
@@ -222,10 +222,20 @@
       font-size: 12px;
       color: var(--muted);
     }
+    #version {
+      position: fixed;
+      bottom: 10px;
+      right: 10px;
+      font-size: 11px;
+      color: var(--muted);
+      opacity: 0.6;
+      z-index: 1000;
+    }
   </style>
 </head>
 
 <body>
+  <div id="version">v1.0.0</div>
   <div class="app">
     <section class="panel">
       <div class="controls">
