--- a/launchpad.html
+++ b/launchpad.html
@@ -112,8 +112,9 @@
         <span class="app-icon">📝</span>
       </a>
 
-      <div class="app-card disabled" style="text-decoration: none; color: inherit;">
-      </div>
+      <a href="unit-tests.html" class="app-card" style="text-decoration: none; color: inherit;">
+        <span class="app-icon">🧪</span>
+      </a>
     </div>
   </div>
 </body>
