Add fourth empty placeholder card to launchpad

--- a/launchpad.html
+++ b/launchpad.html
@@ -115,6 +115,9 @@
       <a href="unit-tests.html" class="app-card" style="text-decoration: none; color: inherit;">
         <span class="app-icon">🧪</span>
       </a>
+
+      <div class="app-card disabled" style="text-decoration: none; color: inherit;">
+      </div>
     </div>
   </div>
 </body>
